updated health and position of healthbar